# figr

./: .ffmt.toml  .fortlsrc  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  figr.bat  figr.sh  ruff.toml
.claude/rules/: common-pitfalls.md  fortran-conventions.md  gpu-and-mpi.md  parameter-system.md
.githooks/: pre-commit
.github/: file-filter.yml
.github/scripts/: check_case_optimization_output.py  prebuild-case-optimization.sh  retry-build.sh  run_case_optimization.sh  submit-slurm-job.sh  submit_and_monitor_bench.sh
.github/workflows/: test.yml
.github/workflows/common/: bench.sh  build.sh  rebuild-cache.sh  test.sh
.github/workflows/frontier_amd/: build.sh
benchmarks/igr/: case.py
docs/superpowers/plans/: 2026-04-01-igr-only-refactor.md  remaining-work.md
examples/2D_IGR_2fluid/: case.py
examples/2D_IGR_double_mach/: case.py
examples/2D_IGR_isentropicvortex/: case.py
examples/2D_IGR_riemann_test/: case.py
examples/2D_IGR_triple_point/: case.py
examples/3D_IGR_33jet/: case.py
examples/3D_IGR_TaylorGreenVortex/: case.py
examples/3D_IGR_TaylorGreenVortex_nvidia/: case.py
examples/3D_IGR_jet/: case.py
examples/3D_IGR_jet_1fluid/: case.py
misc/: check_samples.sh  compiler-tickets.md  profiling_amdgpu.md
packaging/homebrew/: README.md  figr.rb
src/common/: m_boundary_common.fpp  m_checker_common.fpp  m_compile_specific.f90  m_constants.fpp  m_delay_file_access.f90  m_derived_types.fpp  m_finite_differences.fpp  m_helper.fpp  m_helper_basic.fpp  m_mpi_common.fpp  m_nvtx.f90  m_precision_select.f90  m_variables_conversion.fpp
src/common/include/: 1dHardcodedIC.fpp  2dHardcodedIC.fpp  ExtrusionHardcodedIC.fpp  macros.fpp  omp_macros.fpp  parallel_macros.fpp  shared_parallel_macros.fpp
src/post_process/: m_checker.fpp  m_data_input.f90  m_data_output.fpp  m_derived_variables.fpp  m_global_parameters.fpp  m_mpi_proxy.fpp  m_start_up.fpp  p_main.fpp
src/pre_process/: m_assign_variables.fpp  m_boundary_conditions.fpp  m_check_patches.fpp  m_checker.fpp  m_data_output.fpp  m_global_parameters.fpp  m_grid.f90  m_icpp_patches.fpp  m_initial_condition.fpp  m_mpi_proxy.fpp  m_perturbation.fpp  m_start_up.fpp  p_main.f90
src/simulation/: m_checker.fpp  m_data_output.fpp  m_derived_variables.fpp  m_global_parameters.fpp  m_igr.fpp  m_mpi_proxy.fpp  m_rhs.fpp  m_sim_helpers.fpp  m_start_up.fpp  m_time_steppers.fpp  p_main.fpp
src/syscheck/: syscheck.fpp
tests/: failed_uuids.txt
tests/0045D9F8/: golden.txt
tests/023DC5B9/: golden.txt
tests/07004334/: golden-metadata.txt  golden.txt
tests/37DDE283/: golden.txt
tests/6359CD05/: golden-metadata.txt  golden.txt
tests/89FAEB15/: golden-metadata.txt  golden.txt
tests/8BD54862/: golden-metadata.txt  golden.txt
tests/A6DB36C2/: golden.txt
tests/AE3FC5CB/: golden.txt
tests/AFBCBDFA/: golden.txt
tests/CEAF553A/: golden.txt
tests/E28DF59C/: golden-metadata.txt  golden.txt
tests/E8D8E16F/: golden-metadata.txt  golden.txt
tests/EB58AF7F/: golden.txt
toolchain/: main.py  modules  pyproject.toml  util.sh
toolchain/bootstrap/: cmake.sh  completions.sh  format.sh  python.sh
toolchain/cmake/: configuration.cmake.in
toolchain/dependencies/: CMakeLists.txt  Silo.patch
toolchain/figr/: _version.py  args.py  build.py  case.py  clean.py  common.py  lock.py  printer.py  state.py  validate.py
toolchain/figr/cli/: __init__.py  argparse_gen.py  commands.py  schema.py
toolchain/figr/packer/: pack.py  packer.py  tol.py
toolchain/figr/params/: __init__.py  namelist_parser.py
toolchain/figr/run/: case_dicts.py  input.py  queues.py  run.py
toolchain/figr/test/: case.py  cases.py  test.py
toolchain/mfc/: args.py  build.py  case.py  common.py
toolchain/mfc/cli/: __init__.py  commands.py
toolchain/mfc/params/: __init__.py  namelist_parser.py
toolchain/mfc/run/: case_dicts.py  input.py
toolchain/mfc/test/: case.py  cases.py  test.py
toolchain/templates/: bridges2.mako  carpenter-cray.mako  carpenter.mako  delta.mako  deltaai.mako  frontier.mako  frontier_amd.mako  hipergator.mako  nautilus.mako  oscar.mako  phoenix-bench.mako  phoenix.mako  santis.mako  tuo.mako
toolchain/templates/include/: helpers.mako
