[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mfc"
dynamic = ["version"]
dependencies = [
    "rich",
    "PyYAML",
    "fastjsonschema",
    "fypp",
    "mako",
    "ruff",
    "ffmt",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
relative_to = "pyproject.toml"
version_file = "mfc/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "mfc/_version.py"
